--- a/info.css
+++ b/info.css
@@ -21,35 +21,32 @@
 }
 .headerleft img{
     height: 100px;
+
 }
 .headerright{
     margin-top:30px;
     margin-right: 90px;
     height: 20px;
-    text-align: right;
-    font-size: 15px;
+    text-align: center;
+    font-size: 20px;
 }
 .headerright a{
-    letter-spacing: 0.5px;
     color: rgb(0, 0, 0);
 }
 .main{
     width:100%;
     display: flex;
-    justify-content: center;
 }
 .main img{
-    height:400px;
-    margin-top: 100px;
-    margin-left: -400px;
-    
+    margin-left: 200px;
+    height:200px;
 }
 
-.info {
-    margin-top: 3pc;
+.info{
+    margin-top: 0.5pc;
     margin-bottom: 5em;
-    width: 30%;
-    font-size:20px;
+    width: 60%;
+    font-size:25px;
     color: black;
     margin-left: 20px;
     text-align: left;
@@ -62,9 +59,12 @@
 .info a{
     color: rgb(0, 0, 0);
 }
-
+.footer{
+    width: 50%;
+    align-items: center;
+    display: flex;
+}
 @font-face {
     font-family: fontSite;
     src: url(font/InstrumentSerif-Regular.ttf);
 }
-
