--- a/works1-6.css
+++ b/works1-6.css
@@ -1,6 +1,9 @@
+
 *{
     padding: 0;
     margin: 0 auto;
+    box-sizing: border-box;
+    user-select: none;
     text-decoration: none;
     list-style-type: none;
     font-family: fontSite;
@@ -38,12 +41,6 @@
     display: flex;
     justify-content: center;
 }
-.main img{
-    height:400px;
-    margin-top: 100px;
-    margin-left: -400px;
-    
-}
 
 .info {
     margin-top: 3pc;
@@ -67,4 +64,4 @@
     font-family: fontSite;
     src: url(font/InstrumentSerif-Regular.ttf);
 }
-
+  
